# kube-config-updater

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
.serena/: project.yml
claudedocs/: workflow_core_completion.md
docs/adr/: 0001-bitwarden-password-manager-over-secrets-manager.md  0002-shell-out-to-bw-cli.md  0003-explicit-vault-password-delivery.md  0004-api-key-plus-password-file-for-cron.md
docs/plans/: 2026-03-05-bitwarden-implementation-plan.md  2026-03-05-bitwarden-integration-design.md
src/: bitwarden.rs  config.rs  credentials.rs  fetch.rs  kube.rs  main.rs  ssh.rs  state.rs  tests.rs
src/tui/: app.rs  mod.rs
src/tui/features/: bitwarden.rs  credentials.rs  dashboard.rs  detail.rs  edit_server.rs  help.rs  keyring_fallback.rs  mod.rs  setup.rs  wizard.rs
